--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseURL = 'http://BakerLabBABS.github.io/'
-languageCode = 'en-us'
+baseURL = "http://BakerLabBABS.github.io"
 
 # This is a "one page"-website, so we do not need these kinds of pages...
 disableKinds = ["section", "taxonomy", "term", "RSS", "robotsTXT"]
@@ -10,7 +9,7 @@ defaultContentLanguage = "en"
 theme = "hugo-scroll"
 
 # The "title" of your website
-title = "Baker Lab Test Website"
+title = "Jane Doe - Nutrition Coach & Chef Consultant"
 
 [params]
     # A "copyright"-line to be added at the bottom of the page.
