--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ title = "Baker Lab at UNSW - Synthetic and Evolutionary Biology"
 [params]
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Markdown is supported in here as well. So you may e.g. add a link to your legal imprint-page.
-    copyright = "© Matt Baker"
+    copyright = "© Matt Baker (borrowing inspiration from Scott Berry)"
 
     # The "description" of your website. This is used in the meta data of your generated html.
     description = "Baker Lab - UNSW"
